--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <div class='col-1'>
         </div>
         <div class='col-10 justify-content-center' id='mainContentCol'>
-            <h1>Hello, World!</h1>
+            <h1>Loot Generator for Pathfinder 1, with Spheres of Power</h1>
         </div>
         <div class='col-1'>
         </div>
