--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
                 <h1>Loot Generator for Pathfinder 1, with Spheres of Power</h1>
             </div>
             <div class="row">
-                <div class="col-4">
+                <div class="col-3">
                     <label class="form-label" for="aplField">Average Player level:</label>
                     <select id="aplField">
                         <option value="1" selected>1</option>
@@ -55,7 +55,7 @@
                         <option value="20">20</option>
                     </select>
                 </div>
-                <div class="col-4">
+                <div class="col-3">
                     <label class="form-label" for="budgetModifierSelect">Budget modifier:</label>
                     <select id="budgetModifierSelect">
                         <option value="0.5">Incidental</option>
@@ -64,7 +64,15 @@
                         <option value="3">Triple</option>
                     </select>
                 </div>
-                <div class="col-4" id="budget">
+                <div class="col-3">
+                    <label class="form-label" for="budgetProgressionSelect">Budget progression:</label>
+                    <select id="budgetProgressionSelect">
+                        <option value="Slow">Slow</option>
+                        <option value="Medium" selected>Medium</option>
+                        <option value="Fast">Fast</option>
+                    </select>
+                </div>
+                <div class="col-3" id="budget">
                 </div>
             </div>
         </div>
