--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
         <div class='col-10 justify-content-center' id='mainContentCol'>
             <div class="row">
                 <h1>Loot Generator for Pathfinder 1, with Spheres of Power</h1>
+                <p>This is developed when I'm not too tired after work, so if you have found this, do not expect anything</p>
             </div>
             <div class="row">
                 <div class="col-3">
